--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.3",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.4.1",
+    "morgan": "^1.10.0",
+    "node": "^20.14.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
